@@ -1,6 +1,6 @@
 {
   "name": "simp-libreswan",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "author": "SIMP Team",
   "summary": "Manages IPSec VPN Tunnels",
   "license": "Apache-2.0",
@@ -31,7 +31,7 @@
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.1.0 < 4.0.0"
+      "version_requirement": ">= 3.5.0 < 4.0.0"
     }
   ],
   "operatingsystem_support": [
