@@ -1,3 +1,7 @@
+* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 3.1.1-0
+- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
+  Puppet 3 function.
+
 * Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 3.1.0-0
 - Update badges and contribution guide URL in README.md
 
